# brb

./: Cargo.toml  README.md
assets/: default-config.yml  usage.txt
assets/examples/: config.yml
assets/examples/scripts/: write-to-logs.sh
docs/: book.toml
docs/src/: README.md  SUMMARY.md  command-reference.md  config.md  event-payload.md  getting-started.md
src/: channels.rs  cli.rs  config.rs  event.rs  lib.rs  main.rs  runner.rs
tests/: channels_delivery.rs  cli_parse.rs  config_env.rs  config_validation.rs
