[package]
name = "brb-cli"
version = "1.0.0"
edition = "2024"
description = "Run a command. Walk away. Get notified when it finishes."
license = "MIT"
repository = "https://github.com/mcmanussliam/brb"
readme = "README.md"
keywords = ["cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "brb"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
directories = "6.0.0"
hostname = "0.4.1"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.16"
clap = { version = "4.5.32", features = ["derive"] }

[dev-dependencies]
tempfile = "3.23.0"
